CmdAudio/GeneratedAntlr/CmdAudioParser.cpp

// Generated from CmdAudio.g4 by ANTLR 4.5.3


#include "CmdAudioListener.h"

#include "CmdAudioParser.h"


using namespace antlrcpp;
using namespace antlr4;

CmdAudioParser::CmdAudioParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CmdAudioParser::~CmdAudioParser() {
  delete _interpreter;
}

std::string CmdAudioParser::getGrammarFileName() const {
  return "CmdAudio.g4";
}

const std::vector<std::string>& CmdAudioParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CmdAudioParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ChunkContext ------------------------------------------------------------------

CmdAudioParser::ChunkContext::ChunkContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> CmdAudioParser::ChunkContext::EOF() {
  return getToken(CmdAudioParser::EOF, 0);
}

std::vector<Ref<CmdAudioParser::GeneratordefContext>> CmdAudioParser::ChunkContext::generatordef() {
  return getRuleContexts<CmdAudioParser::GeneratordefContext>();
}

Ref<CmdAudioParser::GeneratordefContext> CmdAudioParser::ChunkContext::generatordef(int i) {
  return getRuleContext<CmdAudioParser::GeneratordefContext>((size_t)i);
}


ssize_t CmdAudioParser::ChunkContext::getRuleIndex() const {
  return CmdAudioParser::RuleChunk;
}

void CmdAudioParser::ChunkContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChunk(this);
}

void CmdAudioParser::ChunkContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChunk(this);
}

Ref<CmdAudioParser::ChunkContext> CmdAudioParser::chunk() {
  Ref<ChunkContext> _localctx = std::make_shared<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 0, CmdAudioParser::RuleChunk);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CmdAudioParser::T__0) {
      setState(42);
      generatordef();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    match(CmdAudioParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GeneratordefContext ------------------------------------------------------------------

CmdAudioParser::GeneratordefContext::GeneratordefContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> CmdAudioParser::GeneratordefContext::NAME() {
  return getToken(CmdAudioParser::NAME, 0);
}

Ref<CmdAudioParser::BlockContext> CmdAudioParser::GeneratordefContext::block() {
  return getRuleContext<CmdAudioParser::BlockContext>(0);
}

Ref<CmdAudioParser::GenparlistContext> CmdAudioParser::GeneratordefContext::genparlist() {
  return getRuleContext<CmdAudioParser::GenparlistContext>(0);
}


ssize_t CmdAudioParser::GeneratordefContext::getRuleIndex() const {
  return CmdAudioParser::RuleGeneratordef;
}

void CmdAudioParser::GeneratordefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGeneratordef(this);
}

void CmdAudioParser::GeneratordefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGeneratordef(this);
}

Ref<CmdAudioParser::GeneratordefContext> CmdAudioParser::generatordef() {
  Ref<GeneratordefContext> _localctx = std::make_shared<GeneratordefContext>(_ctx, getState());
  enterRule(_localctx, 2, CmdAudioParser::RuleGeneratordef);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(CmdAudioParser::T__0);
    setState(51);
    match(CmdAudioParser::NAME);
    setState(52);
    match(CmdAudioParser::T__1);
    setState(54);

    _la = _input->LA(1);
    if (_la == CmdAudioParser::NAME) {
      setState(53);
      genparlist();
    }
    setState(56);
    match(CmdAudioParser::T__2);
    setState(57);
    match(CmdAudioParser::T__3);
    setState(58);
    match(CmdAudioParser::T__4);
    setState(59);
    block();
    setState(60);
    match(CmdAudioParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GenparlistContext ------------------------------------------------------------------

CmdAudioParser::GenparlistContext::GenparlistContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<CmdAudioParser::NamelistContext> CmdAudioParser::GenparlistContext::namelist() {
  return getRuleContext<CmdAudioParser::NamelistContext>(0);
}


ssize_t CmdAudioParser::GenparlistContext::getRuleIndex() const {
  return CmdAudioParser::RuleGenparlist;
}

void CmdAudioParser::GenparlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGenparlist(this);
}

void CmdAudioParser::GenparlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGenparlist(this);
}

Ref<CmdAudioParser::GenparlistContext> CmdAudioParser::genparlist() {
  Ref<GenparlistContext> _localctx = std::make_shared<GenparlistContext>(_ctx, getState());
  enterRule(_localctx, 4, CmdAudioParser::RuleGenparlist);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62);
    namelist();
    setState(64);

    _la = _input->LA(1);
    if (_la == CmdAudioParser::T__6) {
      setState(63);
      match(CmdAudioParser::T__6);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamelistContext ------------------------------------------------------------------

CmdAudioParser::NamelistContext::NamelistContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Ref<tree::TerminalNode>> CmdAudioParser::NamelistContext::NAME() {
  return getTokens(CmdAudioParser::NAME);
}

Ref<tree::TerminalNode> CmdAudioParser::NamelistContext::NAME(int i) {
  return getToken(CmdAudioParser::NAME, (size_t)i);
}


ssize_t CmdAudioParser::NamelistContext::getRuleIndex() const {
  return CmdAudioParser::RuleNamelist;
}

void CmdAudioParser::NamelistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNamelist(this);
}

void CmdAudioParser::NamelistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNamelist(this);
}

Ref<CmdAudioParser::NamelistContext> CmdAudioParser::namelist() {
  Ref<NamelistContext> _localctx = std::make_shared<NamelistContext>(_ctx, getState());
  enterRule(_localctx, 6, CmdAudioParser::RuleNamelist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    int alt;
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(CmdAudioParser::NAME);
    setState(71);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(67);
        match(CmdAudioParser::T__6);
        setState(68);
        match(CmdAudioParser::NAME); 
      }
      setState(73);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

CmdAudioParser::BlockContext::BlockContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<CmdAudioParser::OutputstatContext> CmdAudioParser::BlockContext::outputstat() {
  return getRuleContext<CmdAudioParser::OutputstatContext>(0);
}

std::vector<Ref<CmdAudioParser::StatContext>> CmdAudioParser::BlockContext::stat() {
  return getRuleContexts<CmdAudioParser::StatContext>();
}

Ref<CmdAudioParser::StatContext> CmdAudioParser::BlockContext::stat(int i) {
  return getRuleContext<CmdAudioParser::StatContext>((size_t)i);
}


ssize_t CmdAudioParser::BlockContext::getRuleIndex() const {
  return CmdAudioParser::RuleBlock;
}

void CmdAudioParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void CmdAudioParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

Ref<CmdAudioParser::BlockContext> CmdAudioParser::block() {
  Ref<BlockContext> _localctx = std::make_shared<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, CmdAudioParser::RuleBlock);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CmdAudioParser::T__7) {
      setState(74);
      stat();
      setState(79);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(80);
    outputstat();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

CmdAudioParser::StatContext::StatContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> CmdAudioParser::StatContext::NAME() {
  return getToken(CmdAudioParser::NAME, 0);
}

Ref<CmdAudioParser::ExpContext> CmdAudioParser::StatContext::exp() {
  return getRuleContext<CmdAudioParser::ExpContext>(0);
}

Ref<tree::TerminalNode> CmdAudioParser::StatContext::STATEND() {
  return getToken(CmdAudioParser::STATEND, 0);
}


ssize_t CmdAudioParser::StatContext::getRuleIndex() const {
  return CmdAudioParser::RuleStat;
}

void CmdAudioParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void CmdAudioParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}

Ref<CmdAudioParser::StatContext> CmdAudioParser::stat() {
  Ref<StatContext> _localctx = std::make_shared<StatContext>(_ctx, getState());
  enterRule(_localctx, 10, CmdAudioParser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(CmdAudioParser::T__7);
    setState(83);
    match(CmdAudioParser::NAME);
    setState(84);
    match(CmdAudioParser::T__3);
    setState(85);
    exp(0);
    setState(86);
    match(CmdAudioParser::STATEND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutputstatContext ------------------------------------------------------------------

CmdAudioParser::OutputstatContext::OutputstatContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<CmdAudioParser::ExpContext> CmdAudioParser::OutputstatContext::exp() {
  return getRuleContext<CmdAudioParser::ExpContext>(0);
}

Ref<tree::TerminalNode> CmdAudioParser::OutputstatContext::STATEND() {
  return getToken(CmdAudioParser::STATEND, 0);
}


ssize_t CmdAudioParser::OutputstatContext::getRuleIndex() const {
  return CmdAudioParser::RuleOutputstat;
}

void CmdAudioParser::OutputstatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOutputstat(this);
}

void CmdAudioParser::OutputstatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOutputstat(this);
}

Ref<CmdAudioParser::OutputstatContext> CmdAudioParser::outputstat() {
  Ref<OutputstatContext> _localctx = std::make_shared<OutputstatContext>(_ctx, getState());
  enterRule(_localctx, 12, CmdAudioParser::RuleOutputstat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(CmdAudioParser::T__8);
    setState(89);
    exp(0);
    setState(90);
    match(CmdAudioParser::STATEND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

CmdAudioParser::ExplistContext::ExplistContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<Ref<CmdAudioParser::ExpContext>> CmdAudioParser::ExplistContext::exp() {
  return getRuleContexts<CmdAudioParser::ExpContext>();
}

Ref<CmdAudioParser::ExpContext> CmdAudioParser::ExplistContext::exp(int i) {
  return getRuleContext<CmdAudioParser::ExpContext>((size_t)i);
}


ssize_t CmdAudioParser::ExplistContext::getRuleIndex() const {
  return CmdAudioParser::RuleExplist;
}

void CmdAudioParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void CmdAudioParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}

Ref<CmdAudioParser::ExplistContext> CmdAudioParser::explist() {
  Ref<ExplistContext> _localctx = std::make_shared<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 14, CmdAudioParser::RuleExplist);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    exp(0);
    setState(97);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CmdAudioParser::T__6) {
      setState(93);
      match(CmdAudioParser::T__6);
      setState(94);
      exp(0);
      setState(99);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

CmdAudioParser::ExpContext::ExpContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<CmdAudioParser::NumberContext> CmdAudioParser::ExpContext::number() {
  return getRuleContext<CmdAudioParser::NumberContext>(0);
}

Ref<CmdAudioParser::PrefixexpContext> CmdAudioParser::ExpContext::prefixexp() {
  return getRuleContext<CmdAudioParser::PrefixexpContext>(0);
}

Ref<CmdAudioParser::OperatorUnaryContext> CmdAudioParser::ExpContext::operatorUnary() {
  return getRuleContext<CmdAudioParser::OperatorUnaryContext>(0);
}

std::vector<Ref<CmdAudioParser::ExpContext>> CmdAudioParser::ExpContext::exp() {
  return getRuleContexts<CmdAudioParser::ExpContext>();
}

Ref<CmdAudioParser::ExpContext> CmdAudioParser::ExpContext::exp(int i) {
  return getRuleContext<CmdAudioParser::ExpContext>((size_t)i);
}

Ref<CmdAudioParser::OperatorMulDivContext> CmdAudioParser::ExpContext::operatorMulDiv() {
  return getRuleContext<CmdAudioParser::OperatorMulDivContext>(0);
}

Ref<CmdAudioParser::OperatorAddSubContext> CmdAudioParser::ExpContext::operatorAddSub() {
  return getRuleContext<CmdAudioParser::OperatorAddSubContext>(0);
}


ssize_t CmdAudioParser::ExpContext::getRuleIndex() const {
  return CmdAudioParser::RuleExp;
}

void CmdAudioParser::ExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExp(this);
}

void CmdAudioParser::ExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExp(this);
}


Ref<CmdAudioParser::ExpContext> CmdAudioParser::exp() {
   return exp(0);
}

Ref<CmdAudioParser::ExpContext> CmdAudioParser::exp(int precedence) {
  Ref<ParserRuleContext> parentContext = _ctx;
  int parentState = getState();
  Ref<CmdAudioParser::ExpContext> _localctx = std::make_shared<ExpContext>(_ctx, parentState);
  Ref<CmdAudioParser::ExpContext> previousContext = _localctx;
  int startState = 16;
  enterRecursionRule(_localctx, 16, CmdAudioParser::RuleExp, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    int alt;
    enterOuterAlt(_localctx, 1);
    setState(106);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CmdAudioParser::INT:
      case CmdAudioParser::FLOAT: {
        setState(101);
        number();
        break;
      }

      case CmdAudioParser::T__1:
      case CmdAudioParser::NAME: {
        setState(102);
        prefixexp();
        break;
      }

      case CmdAudioParser::T__10:
      case CmdAudioParser::T__11:
      case CmdAudioParser::T__12:
      case CmdAudioParser::T__13: {
        setState(103);
        operatorUnary();
        setState(104);
        exp(3);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(118);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(116);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
        case 1: {
          _localctx = std::make_shared<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(108);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(109);
          operatorMulDiv();
          setState(110);
          exp(3);
          break;
        }

        case 2: {
          _localctx = std::make_shared<ExpContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExp);
          setState(112);

          if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
          setState(113);
          operatorAddSub();
          setState(114);
          exp(2);
          break;
        }

        } 
      }
      setState(120);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

CmdAudioParser::NumberContext::NumberContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<tree::TerminalNode> CmdAudioParser::NumberContext::INT() {
  return getToken(CmdAudioParser::INT, 0);
}

Ref<tree::TerminalNode> CmdAudioParser::NumberContext::FLOAT() {
  return getToken(CmdAudioParser::FLOAT, 0);
}


ssize_t CmdAudioParser::NumberContext::getRuleIndex() const {
  return CmdAudioParser::RuleNumber;
}

void CmdAudioParser::NumberContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNumber(this);
}

void CmdAudioParser::NumberContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNumber(this);
}

Ref<CmdAudioParser::NumberContext> CmdAudioParser::number() {
  Ref<NumberContext> _localctx = std::make_shared<NumberContext>(_ctx, getState());
  enterRule(_localctx, 18, CmdAudioParser::RuleNumber);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _la = _input->LA(1);
    if (!(_la == CmdAudioParser::INT

    || _la == CmdAudioParser::FLOAT)) {
    _errHandler->recoverInline(this);
    } else {
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrefixexpContext ------------------------------------------------------------------

CmdAudioParser::PrefixexpContext::PrefixexpContext(std::weak_ptr<ParserRuleContext> parent, int invokingState)
  : ParserRuleContext(parent, invokingState) {
}

Ref<CmdAudioParser::FunctionContext> CmdAudioParser::PrefixexpContext::function() {
  return getRuleContext<CmdAudioParser::FunctionContext>(0);
}

Ref<CmdAudioParser::NamedArgListContext> CmdAudioParser::PrefixexpContext::namedArgList() {
  return getRuleContext<CmdAudioParser::NamedArgListContext>(0);
}

Ref<CmdAudioParser::VarOrExpContext> CmdAudioParser::PrefixexpContext::varOrExp() {
  return getRuleContext<CmdAudioParser::VarOrExpContext>(0);
}


ssize_t CmdAudioParser::PrefixexpContext::getRuleIndex() const {
  return CmdAudioParser::RulePrefixexp;
}

void CmdAudioParser::PrefixexpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrefixexp(this);
}

void CmdAudioParser::PrefixexpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CmdAudioListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrefixexp(this);
}

Ref<CmdAudioParser::PrefixexpContext> CmdAudioParser::prefixexp() {
  Ref<PrefixexpContext> _localctx = std::make_shared<PrefixexpContext>(_ctx, getState());
  enterRule(_localctx, 20, CmdAudioParser::RulePrefixexp);
  ssize_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(131);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(123);
      function();
      setState(124);
      match(CmdAudioParser::T__1);
      setState(126);

      _la = _input->LA(1);
      if (_la == CmdAudioParser::NAME) {
        setState(125);
        namedArgList();
      }
      setState(128);
      match(CmdAudioParser::T__2);
      break;
    }
